rename files prefix name model

--- a/src/app/components/employe-detail.component.html
+++ b/src/app/components/employe-detail.component.html
@@ -20,8 +20,8 @@
           <div class="mb-2">{{Employ.email}}</div>
 
           <div>
-            <fa-icon *ngIf="Employ.suspended" [icon]="faSquareCheck" class="text-primary"></fa-icon>
-            <fa-icon *ngIf="!Employ.suspended" [icon]="faSquare"></fa-icon>
+            <fa-icon *ngIf="Employ.suspended" [icon]="fontIcons.faSquareCheck" class="text-primary"></fa-icon>
+            <fa-icon *ngIf="!Employ.suspended" [icon]="fontIcons.faSquare"></fa-icon>
           </div>
         </div>
       </div>
