--- a/src/app/components/employe-detail.component.html
+++ b/src/app/components/employe-detail.component.html
@@ -25,9 +25,9 @@
           </div>
         </div>
       </div>
-      <div class="mt-4 col-md-4">
-        <button routerLink='/employes' class="btn btn-sm btn-secondary me-5 " style="width: 45%">Cancel</button>
-        <button [routerLink]="['/employes/edit', id]" class="btn  btn-sm btn-primary " style="width: 45%">Edit</button>
+      <div class="mt-4 col-md-12">
+        <button routerLink='/employes' class="btn btn-sm btn-secondary me-5 " style="width: 10%">Cancel</button>
+        <button [routerLink]="['/employes', id, 'edit']" class="btn  btn-sm btn-primary " style="width: 10%">Edit</button>
       </div>
     </div>
   </div>
