--- a/src/app/components/employ/employe-delete.component.html
+++ b/src/app/components/employ/employe-delete.component.html
@@ -33,22 +33,4 @@
 </ng-container>
 
  <!-- modalConfirm -->
-<ng-container *ngIf="showConfirm" >
-  <div style="background-color:rgba(0, 0, 0, 0.582) ;" class="modal d-block" tabindex="-1">
-    <div class="modal-dialog   modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Alert!!</h5>
-          <button (click)="hidenModal(false)" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>{{confirmMessage.delete}}</p>
-        </div>
-        <div class="modal-footer">
-          <button (click)="hidenModal(false)" type="button" class="btn btn-sm btn-secondary w-25" data-bs-dismiss="modal">Close</button>
-          <button (click)="confirmDelete()" type="button" class="btn btn-sm btn-primary  w-25">Save</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</ng-container>
+<scfld-confirm (action)="$event" [confirmMessage]="confirmMessage.delete" modalTitle="Alert!!!"></scfld-confirm>
