--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,11 @@
-<!------------------------
+<div class="d-flex">
+  <!------------------------
   Nav
 ------------------------->
-<nav class="container-fluid navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-    </div>
-  </div>
-</nav>
+<scfld-sidenav></scfld-sidenav>
 <!------------------------
   End Nav
 ------------------------->
-<router-outlet></router-outlet>
+<div class="w-100"><router-outlet></router-outlet></div>
+</div>
