--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -2,17 +2,17 @@
   <fa-icon (click)="show(false)" class="toogle-menu" [icon]="buttonToggle"></fa-icon>
   <nav class="rg-nav ">
     <div class="rg-nav__content">
-      <div class="p-4 border-bottom">
-        <div class="d-flex justify-content-center">
+      <div class="head-menu">
+        <div class="d-flex justify-content-center ">
           <img class="avatar" src="../../../assets/personDefault.jpg" alt="User image">
         </div>
-        <div class="d-flex flex-column align-items-center">
+        <div class="d-flex flex-column align-items-center ">
           <span class="text-white">Name User Here</span>
           <span class="text-white">Descriptions</span>
         </div>
       </div>
-      <ul class="rg-nav__content-links p-3 list-unstyled ">
-        <li [routerLink]="[link.link]"   (click)="setCurrentLink(link.title)" [ngClass]="{'activeNav': currentLink == link.title}" class="rg-nav__content-links-link p-1"  *ngFor="let link of listLink">
+      <ul class="rg-nav__content-links list-unstyled  border-top  py-3  ">
+        <li  [routerLink]="[link.link]"   (click)="setCurrentLink(link.title)" [ngClass]="{'activeNav': currentLink == link.title}" class="rg-nav__content-links-link py-2 px-3 "  *ngFor="let link of listLink">
           <fa-icon [icon]="link.icon"></fa-icon>
           <span >{{link.title}}</span>
         </li>
